crates/deadline-cli/tests/snapshots/cli_job_logs__job_logs_auto_selects_most_recently_ended.snap
---
source: crates/deadline-cli/tests/cli_job_logs.rs
info:
  program: deadline
  args:
    - job
    - logs
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:53176"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:53176"
    AWS_ENDPOINT_URL_STS: "http://localhost:53176"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmp4jBz35/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmp4jBz35
---
success: true
exit_code: 0
----- stdout -----
Using session: [SESSION_ID]
Retrieving logs for [SESSION] from log group /aws/deadline/farm-abc/queue-abc...
Job ID: job-aaa
Job Name: Render Job

No logs found for the specified session.
More logs are available. Use --next-token "f/token" to retrieve the next page.

----- stderr -----
