crates/deadline-cli/tests/snapshots/cli_job_logs__job_logs_log_group_not_found_shows_no_logs.snap
---
source: crates/deadline-cli/tests/cli_job_logs.rs
info:
  program: deadline
  args:
    - job
    - logs
    - "--session-id"
    - session-001
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61504"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61504"
    AWS_ENDPOINT_URL_STS: "http://localhost:61504"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpxr8ilc/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpxr8ilc
---
success: true
exit_code: 0
----- stdout -----
Retrieving logs for [SESSION] from log group /aws/deadline/farm-abc/queue-abc...
Job ID: job-aaa
Job Name: Render Job

No logs found for the specified session.

----- stderr -----
